# artefactual

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  CONTRIBUTING.md  DEMO_README.md  README.md  analyze_epr_results.py  cliff.toml  create_sample_data.py  demo_uncertainty.py  demo_uncertainty_notebook.ipynb  pyproject.toml  requirements.txt  validate_changes.py
.github/workflows/: build.yaml  docs.yml  pre-commit.yaml  release.yaml  tests.yaml
assets/data/: calibration_falcon3.json  calibration_mistral_small.json  calibration_phi_4.json  weights_falcon3.json  weights_mistral_small.json
docs/: api.md  conf.py  hallucination_pipeline_design.md  index.md
examples/: calibration_script.py  demo.ipynb  demo_uncertainty.py  demo_uncertainty_notebook.ipynb  entropic_pipeline_demo.py  epr_usage_demo.py  wepr_demo.ipynb  wepr_usage_demo.ipynb
generation_test/: DEMO_Ministral-8B-Instruct-2410_1.0_10_with_EPR_EPR_SUMMARY.txt
scripts/ECIR2026/Experiments/: compute_entropic_features.py  eval_EPR.py  eval_WEPR.py
scripts/ECIR2026/Halludetect/: README.md  compute_prob_features.py  evaluate_features_proba.py
scripts/ECIR2026/SelfCheckGPT/: README.md  SCGPT_generate_mistral.py  SCGPT_mod_json.py
scripts/ECIR2026/common/: README.md
scripts/cablibration_llm/: entropic_scoring.py  generate_responses.py  rates_answers.py  score_responses.py
scripts/calibration_llm/: calibration.py  entropic_scoring.py  generate_responses.py  plot_calibration.py  plot_entropy.py  rates_answers.py  run_outputs_entropy.py  run_rates_answers.py  run_train_calibration.py  score_responses.py
scripts/calibration_llm/QA_answer_generation/: TQA_generation.py
scripts/paper_scripts/: README.md
scripts/paper_scripts/Experiments/: README.md  compute_entropic_features.py
scripts/paper_scripts/Halludetect/: README.md  evaluate_features_proba.py  merge_features_proba.py
scripts/paper_scripts/SelfCheckGPT/: README.md  SCGPT_bertscore.py  SCGPT_generate.py  bootstrap_evaluation.py  fuse_score_judgement.py
scripts/paper_scripts/common/: QA_data_generation.py  rates_answers.py
src/artefactual/: __init__.py  __main__.py  entropic_mixins.py  estimators.py  parsers.py  protocols.py  test_estimators.py  test_parsers.py  test_uncertainty.py  transformers.py  uncertainty.py
src/artefactual/calibration/: __init__.py  outputs_entropy.py  rates_answers.py  train_calibration.py
src/artefactual/calibration/helpers/: memory.py  models.py
src/artefactual/calibration/utils/: io.py  models.py
src/artefactual/config/: __init__.py  dataset.py  model.py  sampling.py
src/artefactual/data/: __init__.py  calibration_Falcon3.json  calibration_Ministral.json  calibration_Small.json  calibration_ministral.json  data_model.py  readers.py  weights_Falcon3.json  weights_Ministral.json  weights_Small.json  weights_ministral.json  weights_phi4.json
src/artefactual/entropy/: __init__.py  calculations.py  feature_calculations.py
src/artefactual/models/: __init__.py  uncertainty.py
src/artefactual/preprocessing/: __init__.py  openai_parser.py  parser.py  vllm_parser.py
src/artefactual/scoring/: __init__.py  epr.py  logprobs.py  methods.py  uncertainty.py  uncertainty_detector.py  wepr.py
src/artefactual/scoring/entropy_methods/: __init__.py  entropy_contributions.py  epr.py  uncertainty_detector.py  wepr.py
src/artefactual/tests/: test_data_processing.py  test_entropy.py  test_logprobs.py  test_methods.py  test_rates_answers.py  test_readers.py  test_uncertainty.py
src/artefactual/utils/: __init__.py  calibration.py  io.py  memory.py  models.py  weights.py
tests/: conftest.py  test_data_api.py  test_data_processing.py  test_entropy.py  test_entropy_contributions.py  test_epr.py  test_io.py  test_io_loading.py  test_methods.py  test_rates_answers.py  test_scores.py  test_train_calibration.py  test_uncertainty.py
